added egenomics and one publication

--- a/tools_resources.html
+++ b/tools_resources.html
@@ -10,6 +10,16 @@ permalink: /resources/
     </p>
   </div>
 </div>
+
+<div class="row">
+  <div class="col-sm-12">
+    <p> <strong>eGenomics Catalogue </strong></p>
+    <p>The eGenomics catalogue was initiated by H3ABioNet and is maintained by volunteers from across the globe. This catalogue lists free online Genomics educational materials and community-based reviews/evaluations. The material aggregated via this website includes Courses, MOOCs, and Webinars. 
+      <br><a href="https://egenomics.h3abionet.org" target="_blank">https://egenomics.h3abionet.org</a>
+    </p>
+  </div>
+</div>
+
 <div class="row">
   <div class="col-sm-12">
     <p> <strong>IDseq </strong></p>
