--- a/publications.html
+++ b/publications.html
@@ -20,18 +20,18 @@ permalink: /resources/publications/
         </div>
         <div id="collapse1" class="panel-collapse collapse in">
           <div class="panel-body">
-            <p>
-              Onywera, H., Ondoa, P., Nfii, F., Ogwell, A., Kebede, Y., Christoffels, A., & Tessema, S. K. <b>(2023) </b> <a style="color:black;"
-                href="https://doi.org/10.1016/S1473-3099(23)00394-8" target="_blank">
-
-                Boosting pathogen genomics and bioinformatics workforce in Africa
-
-              </a>
-              <i>The Lancet Infectious Diseases doi: 10.1016/S1473-3099(23)00394-8</i>
-              <hr>
-            </p>
-
-
+                  <p>
+        Harris Onywera, Collins Kipngetich Tanui, Alisen Ayitewala,
+        Alex N. Kasembeli, Moussa M. Diagne & Sofonias K. Tessema
+        <b>(2026)</b>
+        <a style="color:black;"
+          href="https://doi.org/10.1038/s41467-026-68874-7"
+          target="_blank">
+          Harnessing the power of virtual reality technology to enhance public health genomics skills in Africa
+        </a>
+        <i>Nature Communications, 17, Article 1490</i>
+             <hr>
+      </p>
             <p>
               Marie-Claude Blatter, Philippe Le Mercier & Teresa K. Attwood <b>(2021) </b> <a style="color:black;"
                 href="https://doi.org/10.7490/f1000research.1118746.1" target="_blank">
