--- a/upcoming-events-abi.html
+++ b/upcoming-events-abi.html
@@ -1,96 +1,142 @@
 ---
 layout: default
-title: ABI Upcoming Events
+title: Upcoming Courses & Events
 permalink: /abi-events/
 ---
 <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css">
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
 <div class="table-responsive">
-  <table id="abiEventsTable" class="display stripe hover" style="width:100%">
-    <thead>
-      <tr>
-        <th>Title</th>
-        <th>Organizer</th>
-        <th>Start Date</th>
-        <th>End Date</th>
-      </tr>
-    </thead>
-    <tbody id="eventsBody">
-      <tr>
-        <td colspan="4" style="text-align:center;">Loading events...</td>
-      </tr>
-    </tbody>
-  </table>
+<table id="abiEventsTable" class="display stripe hover" style="width:100%">
+<thead>
+<tr>
+  <th>Title</th>
+  <th>Organizer</th>
+  <th>Start Date</th>
+  <th>End Date</th>
+</tr>
+</thead>
+<tbody id="eventsBody">
+  <!-- Jekyll-generated rows (rendered at build time) -->
+  {% assign sorted_posts = site.posts | where: "category", "upcoming" %}
+  {% for post in sorted_posts %}
+  <tr>
+    <td data-order="{{ post.title }}">
+      <a href="{{ post.link }}" target="_blank" rel="noopener noreferrer">
+        {{ post.title }}
+      </a>
+      <br>
+      <small>Posted: {{ post.posted_date | date_to_string }}</small>
+    </td>
+    <td>{{ post.training_provider }}</td>
+    <td data-order="{{ post.start_date }}">{{ post.start_date | date: "%a, %b %d %Y" }}</td>
+    <td data-order="{{ post.end_date }}">{{ post.end_date | date: "%a, %b %d %Y" }}</td>
+  </tr>
+  {% endfor %}
+</tbody>
+</table>
 </div>
 <script>
-  // ==========================================
-  // Fetch ABI Upcoming Events → Format into DataTable
-  // ==========================================
-  const corsProxy = "https://api.allorigins.win/get?url=";
-  const abiApi = encodeURIComponent("https://bioinformaticsinstitute.africa/get_upcoming_training");
+const abiEventsUrl = "https://www.bioinformaticsinstitute.africa/events";
 
-  // Helper function to escape HTML to prevent XSS
-  function escapeHtml(text) {
-    const div = document.createElement('div');
-    div.textContent = text;
-    return div.innerHTML;
+const corsProxies = [
+  { url: "https://corsproxy.io/?", parse: r => r.text() },
+  { url: "https://api.allorigins.win/get?url=", parse: r => r.json().then(w => w.contents) },
+  { url: "https://api.codetabs.com/v1/proxy?quest=", parse: r => r.text() }
+];
+
+function escapeHtml(text) {
+  const div = document.createElement('div');
+  div.textContent = text;
+  return div.innerHTML;
+}
+
+function initDataTable() {
+  if ($.fn.DataTable.isDataTable('#abiEventsTable')) {
+    $('#abiEventsTable').DataTable().destroy();
   }
+  $("#abiEventsTable").DataTable({
+    pageLength: 10,
+    order: [[2, "asc"]],
+    responsive: true
+  });
+}
 
-  fetch(`${corsProxy}${abiApi}`)
-    .then(response => {
-      if (!response.ok) throw new Error("Network error");
-      return response.json();
-    })
-    .then(wrapper => {
-      let rawData;
-      try {
-        rawData = JSON.parse(wrapper.contents);
-      } catch (err) {
-        throw new Error("Invalid JSON from API");
-      }
-      const data = Array.isArray(rawData)
-        ? rawData
-        : Array.isArray(rawData.data)
-          ? rawData.data
-          : [];
-      const tbody = document.getElementById("eventsBody");
-      tbody.innerHTML = "";
-      if (data.length === 0) {
-        tbody.innerHTML = `<tr><td colspan="4" style="text-align:center;">No upcoming events found.</td></tr>`;
-        return;
-      }
-      data.forEach(event => {
-        const title = escapeHtml(event.training_title || "Untitled Event");
-        const org = escapeHtml(event.organizer || "Unknown");
-        const start = escapeHtml(event.start_date || "TBA");
-        const end = escapeHtml(event.end_date || "TBA");
-        const url = event.training_url || "#";
-        const row = `
-          <tr>
-            <td><a href="${escapeHtml(url)}" target="_blank" rel="noopener noreferrer">${title}</a></td>
-            <td>${org}</td>
-            <td>${start}</td>
-            <td>${end}</td>
-          </tr>
-        `;
-        tbody.insertAdjacentHTML("beforeend", row);
-      });
-      // Initialize DataTable AFTER data is loaded
-      // Check if already initialized to prevent errors
-      if ($.fn.DataTable.isDataTable('#abiEventsTable')) {
-        $('#abiEventsTable').DataTable().destroy();
-      }
-      $("#abiEventsTable").DataTable({
-        pageLength: 10,
-        order: [[2, "asc"]], // sort by start date
-        responsive: true
-      });
-    })
-    .catch(err => {
-      console.error("Fetch error:", err);
-      document.getElementById("eventsBody").innerHTML = `
-        <tr><td colspan="4" style="text-align:center;">Failed to load events.</td></tr>
-      `;
-    });
+function parseEventsFromHtml(html) {
+  const parser = new DOMParser();
+  const doc = parser.parseFromString(html, "text/html");
+  const rows = doc.querySelectorAll("table.views-view-table tbody tr");
+  const events = [];
+
+  rows.forEach(row => {
+    const cells = row.querySelectorAll("td");
+    if (cells.length < 2) return;
+
+    // Column 1: title + link
+    const linkEl = cells[0].querySelector("a");
+    const title = linkEl ? linkEl.textContent.trim() : cells[0].textContent.trim();
+    const href = linkEl ? linkEl.getAttribute("href") : "#";
+    const fullUrl = href.startsWith("http") ? href : "https://www.bioinformaticsinstitute.africa" + href;
+
+    // Column 2: date string like "Mon, Apr 14 2025 - Thu, Apr 17 2025"
+    const dateText = cells[1].textContent.trim();
+    let startDate = dateText;
+    let endDate = "";
+
+    if (dateText.includes(" - ")) {
+      const parts = dateText.split(" - ");
+      startDate = parts[0].trim();
+      endDate = parts[1].trim();
+    }
+
+    events.push({ title, url: fullUrl, startDate, endDate });
+  });
+
+  return events;
+}
+
+function appendAbiRows(events) {
+  const tbody = document.getElementById("eventsBody");
+  events.forEach(event => {
+    const row = `
+      <tr>
+        <td><a href="${escapeHtml(event.url)}" target="_blank" rel="noopener noreferrer">${escapeHtml(event.title)}</a></td>
+        <td>ABI</td>
+        <td data-order="${escapeHtml(event.startDate)}">${escapeHtml(event.startDate)}</td>
+        <td data-order="${escapeHtml(event.endDate)}">${escapeHtml(event.endDate)}</td>
+      </tr>
+    `;
+    tbody.insertAdjacentHTML("beforeend", row);
+  });
+}
+
+async function fetchWithFallback() {
+  for (const proxy of corsProxies) {
+    try {
+      console.log("Trying proxy:", proxy.url);
+      const response = await fetch(proxy.url + encodeURIComponent(abiEventsUrl));
+      if (!response.ok) continue;
+      const html = await proxy.parse(response);
+      const events = parseEventsFromHtml(html);
+      console.log("Scraped", events.length, "ABI events");
+      return events;
+    } catch (err) {
+      console.warn("Proxy failed:", proxy.url, err.message);
+    }
+  }
+  console.error("All CORS proxies failed");
+  return [];
+}
+
+fetchWithFallback()
+  .then(events => {
+    if (events.length > 0) {
+      appendAbiRows(events);
+    }
+    initDataTable();
+  })
+  .catch(err => {
+    console.error("Unexpected error:", err);
+    initDataTable();
+  });
 </script>
